force-app/main/default/objects/AcctSeed__Project_Task__c/fields/AcctSeed__Budgeted_Hours__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Budgeted_Hours__c</fullName>
    <inlineHelpText>Budget for Labor Hours.</inlineHelpText>
    <label>Budgeted Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>