force-app/main/default/objects/AcctSeed__Project_Task__c/fields/AcctSeed__Budgeted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Budgeted_Revenue__c</fullName>
    <inlineHelpText>Budgeted Revenue for a Project Task. Amount should be a positive value.</inlineHelpText>
    <label>Budgeted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>