force-app/main/default/objects/AcctSeed__Project_Task__c/fields/AcctSeed__Display_in_Time_Card__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Display_in_Time_Card__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this box to enable the selection of this project task from the time card entry screen.</inlineHelpText>
    <label>Display in Expense Report / Time Card</label>
    <type>Checkbox</type>
</CustomField>