force-app/main/default/objects/AcctSeed__Project_Task__c/fields/AcctSeed__Duration__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Duration__c</fullName>
    <formula>AcctSeed__End_Date__c - AcctSeed__Start_Date__c+1</formula>
    <inlineHelpText>The number in days between the Start Date and End Date of a Project Task.</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>