force-app/main/default/objects/AcctSeed__Project_Task__c/fields/AcctSeed__End_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__End_Date__c</fullName>
    <inlineHelpText>The date a project task ends on.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>