force-app/main/default/objects/AcctSeed__Project_Task__c/fields/AcctSeed__Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Percent_Complete__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Used to determine an estimate for completeness in reporting.</inlineHelpText>
    <label>% Complete</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>