force-app/main/default/objects/AcctSeed__Project_Task__c/fields/AcctSeed__Project_ID__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Project_ID__c</fullName>
    <formula>AcctSeed__Project__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project ID</label>
    <type>Text</type>
</CustomField>