force-app/main/default/objects/AcctSeed__Project_Task__c/fields/AcctSeed__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Sort_Order__c</fullName>
    <description>Used to display tasks in a particular sort order.</description>
    <inlineHelpText>Use this field to control the order by which project tasks appear in lists and reports.</inlineHelpText>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>