force-app/main/default/objects/AcctSeed__Project_Task__c/fields/AcctSeed__Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Status__c</fullName>
    <inlineHelpText>Used in filtered lookups to eliminate inactive and completed projects from selection.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>