force-app/main/default/objects/AcctSeed__Project_Task__c/fields/AcctSeed__Utilization_Category__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Utilization_Category__c</fullName>
    <inlineHelpText>Used to identify tasks that belong to a specific utilization category for reporting on productivity of time.</inlineHelpText>
    <label>Utilization Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project Related</fullName>
                <default>true</default>
                <label>Project Related</label>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Paid Time Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>