force-app/main/default/objects/AcctSeed__Project_Task__c/fields/Complaint_dh__c.field-meta.xml
<CustomField>
    <fullName>Complaint_dh__c</fullName>
    <label>Complaint</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>