force-app/main/default/objects/AcctSeed__Project_Task__c/fields/DisplayOnCustomerInvoice__c.field-meta.xml
<CustomField>
    <fullName>DisplayOnCustomerInvoice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display on Customer Invoice</label>
    <type>Checkbox</type>
</CustomField>