force-app/main/default/objects/AcctSeed__Project_Task__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Enter the time that the task line was completed</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>