force-app/main/default/objects/AcctSeed__Project_Task__c/fields/Estimated_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration__c</fullName>
    <label>Estimated Duration</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>