force-app/main/default/objects/AcctSeed__Project_Task__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>