force-app/main/default/objects/AcctSeed__Project_Task__c/fields/Finished_Goods__c.field-meta.xml
<CustomField>
    <fullName>Finished_Goods__c</fullName>
    <label>Finished Goods</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>