force-app/main/default/objects/AcctSeed__Project_Task__c/fields/GMBLASERP__Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Actual_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Revenue</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>