force-app/main/default/objects/AcctSeed__Project_Task__c/fields/GMBLASERP__Lot__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Lot__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Lot</label>
    <referenceTo>GMBLASERP__Lot__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>