force-app/main/default/objects/AcctSeed__Project_Task__c/fields/GMBLASERP__Product__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>