force-app/main/default/objects/AcctSeed__Project_Task__c/fields/GMBLASERP__Quantity_Filled__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Quantity_Filled__c</fullName>
    <label>Quantity Filled</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>