force-app/main/default/objects/AcctSeed__Project_Task__c/fields/Is_Retail_Boat_Sale__c.field-meta.xml
<CustomField>
    <fullName>Is_Retail_Boat_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SYSTEM ONLY - used to distinguish this task as the one that olds all Sales items for the retail boat sale</description>
    <label>Is Retail Boat Sale</label>
    <type>Checkbox</type>
</CustomField>