force-app/main/default/objects/AcctSeed__Project_Task__c/fields/IsInsurance__c.field-meta.xml
<CustomField>
    <fullName>IsInsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Project Task contains Insurance Items</description>
    <label>Is Insurance</label>
    <type>Checkbox</type>
</CustomField>