force-app/main/default/objects/AcctSeed__Project_Task__c/fields/Labour_hours__c.field-meta.xml
<CustomField>
    <fullName>Labour_hours__c</fullName>
    <description>Enter the date work was completed and the time it took to complete</description>
    <label>Labour hours</label>
    <length>25</length>
    <type>Text</type>
</CustomField>