force-app/main/default/objects/AcctSeed__Project_Task__c/fields/Order_Item_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Total__c</fullName>
    <label>Order Item Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>