force-app/main/default/objects/AcctSeed__Project_Task__c/fields/Order_Taxable_Retail__c.field-meta.xml
<CustomField>
    <fullName>Order_Taxable_Retail__c</fullName>
    <label>Order Taxable Retail</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>