force-app/main/default/objects/AcctSeed__Project_Task__c/fields/Technician_del__c.field-meta.xml
<CustomField>
    <fullName>Technician_del__c</fullName>
    <description>Service Technician Assigned to perform the work</description>
    <label>Technician</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anthony Nichols</fullName>
            </value>
            <value>
                <fullName>Brandon Milne</fullName>
            </value>
            <value>
                <fullName>Brian Polden</fullName>
            </value>
            <value>
                <fullName>Chris Holloway</fullName>
            </value>
            <value>
                <fullName>Colin Jewel</fullName>
            </value>
            <value>
                <fullName>David Burns</fullName>
            </value>
            <value>
                <fullName>Donald Tarr</fullName>
            </value>
            <value>
                <fullName>Graham Fielding</fullName>
            </value>
            <value>
                <fullName>Jeff McTaggart</fullName>
            </value>
            <value>
                <fullName>Jesse Meade</fullName>
            </value>
            <value>
                <fullName>Justin landry</fullName>
            </value>
            <value>
                <fullName>Mark Lehman</fullName>
            </value>
            <value>
                <fullName>Mikki Makkan</fullName>
            </value>
            <value>
                <fullName>Reid Robinson</fullName>
            </value>
            <value>
                <fullName>Ryan Knight</fullName>
            </value>
            <value>
                <fullName>Steve Corbin</fullName>
            </value>
            <value>
                <fullName>Trevor Hall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>