force-app/main/default/objects/AcctSeed__Project_Task__c/fields/WIP__c.field-meta.xml
<CustomField>
    <fullName>WIP__c</fullName>
    <label>WIP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>